# Clipse

./: CMakeLists.txt  defines.h
KeyboardHook/: hook.cpp  hook.h
Macros/: action.cpp  action.h  input.h  keyMap.h  macro.cpp  macro.h
